# w9-search

./: .env.example  .gitignore  Cargo.toml  Dockerfile.build  README.md  docker-compose.yml  dokploy.yml
.github/workflows/: docker-build.yml
src/: api.rs  auth.rs  db.rs  llm.rs  main.rs  models.rs  rag.rs  search.rs  templates.rs  tools.rs
static/: style.css
