[package]
name = "w9-search"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
maud = { version = "0.27", features = ["axum"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
scraper = "0.19"
html5ever = "0.27"
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
md5 = "0.7"
sha2 = "0.10"
base64 = "0.21"
meval = "0.2"
digest = "0.10"
regex = { version = "1.10", features = ["perf"] }
async-trait = "0.1.89"
futures = "0.3.31"
tokio-stream = "0.1.18"